@@ -1,11 +1,64 @@
 ![CreateNuggets logo](logo-text.png)
 
-A Create oriented modpack.
+**A Create transport-first oriented modpack.**
 
-Modlist: [docs](https://docs.google.com/spreadsheets/d/1md-xvSr5DA3Rf06QgSAUO-tObzqWjCiO6LJx0VeSbt0/edit?usp=sharing)
+Built as a multiplayer experience for friend groups, with fun for all player types.
 
-Modpack created using [PW-GUI](https://github.com/AmberIsFrozen/PW-GUI).
+[View the ModList](https://docs.google.com/spreadsheets/d/1md-xvSr5DA3Rf06QgSAUO-tObzqWjCiO6LJx0VeSbt0/edit?usp=sharing)
+
+See the [Changelog](CHANGELOG.md) for version history, or check the [Releases](https://github.com/Mak0nz/CreateNuggets-Modpack/releases) page.
+
+## Requirements
+
+- **Java 25**, launched with the following JVM flags:
+  `-XX:+UseZGC -XX:+UseCompactObjectHeaders`
+- **RAM:** 8 GB minimum, 12 GB recommended
+
+## Installation
+
+This pack isn't hosted on Modrinth or CurseForge, as several included mods are exclusive to only one of the two platforms.
+
+You can get it one of two ways:
+
+1. **Download a prebuilt release** — grab the latest version from the [Releases](https://github.com/Mak0nz/CreateNuggets-Modpack/releases) page (includes a download link).
+2. **Build it yourself** — compile the pack using [PW-GUI](https://github.com/AmberIsFrozen/PW-GUI).
+
+## Notable Highlights
+
+- **Create**, plus a wide range of addons/extensions
+- **Ars Nouveau**
+- **Biomes O' Plenty**
+- **Immersive Aircraft**
+- **MineColonies**
+
+All mods are checked for compatibility with each other, with custom gameplay balancing & tweaks layered on top.
+
+## FAQ
+
+<details>
+<summary><strong>Why "Nuggets"?</strong></summary>
+
+<br>
+
+Cause we love 'em. Also it's also a backronym for **N**etworks of **U**nified **G**round, **G**liding, and **E**nchanted **T**ransport **S**ystems.
+
+</details>
+
+<details>
+<summary><strong>Why no custom quests?</strong></summary>
+
+<br>
+
+Custom quests have not been added as we believe they limit freedom & creativity, by locking you into certain gameplay paths. While we wanted to keep the sandbox truly free to explore.
+
+</details>
 
 ---
 
-*Minecraft and the Minecraft logo are trademarks of Mojang Studios.*
+Modpack created using [PW-GUI](https://github.com/AmberIsFrozen/PW-GUI).
+
+_Custom modpack manager tool comming soon!_
+
+---
+
+_Minecraft and the Minecraft logo are trademarks of Mojang Studios._
